<resources>
    <string name="app_name">CartPartners App v1</string>
    <string name="close_button">X</string>
    <string name="description_default">Description</string>
    <string name="date_default">Date</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="save_post">Save Post</string>

    <string name="commentEmptyToast">Comment must be nonempty</string>
    <string name="successfulUpload">Success in uploading photo</string>
    <string name="failedUpload">Failure in uploading photo</string>
    <string name="cancelPhoto">Cancelled taking photo!</string>

    <string name="failToFindPhoto">Fail to find photo</string>
    <string name="failToGetKey">Fail to get key</string>
    <string name="permissionGranted">Permission Granted</string>

    <string-array name="cuisine_array">
        <item>Any</item>
        <item>Chinese</item>
        <item>Italian</item>
        <item>American</item>
        <item>Korean</item>
        <item>Japanese</item>
        <item>Mexican</item>
    </string-array>

    <string name="ItemImageView">Picture of Item</string>

    <string name="orderBy">Order Items By:</string>
    <string name="viewAllYourRecipes">View All of Your Delicious Recipes</string>
    <string name="salePrice">New Sale Price</string>
    <string name="saleStart">Start Date</string>
    <string name="saleEnd">End Date</string>

    <string name="itemInventoryView">Item Inventory</string>
    <string name="metricsView">Sales Metrics</string>
    <string name="settingsView">Settings</string>

    <string name="switchTitle">Switch Title</string>
    <string name="switchDescription">Switch Description</string>

    <!-- Settings Activity -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Settings for Account pref -->
    <string name="remember_login_summary">Will not prompt user to enter login information each time app is opened</string>
    <string name="remember_login_title">Remember Login Credentials</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="sign_out_summary">Signs Out the User, prompting them for new user credentials</string>
    <string name="account_pref">Account</string>

    <!-- Login Page -->
    <string name="login">Login</string>
    <string name="cartpartners">CartPartners</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>

    <!-- Metrics Stuff -->
    <string name="timeline_title">Timeline</string>
    <string name="line_graph_title">Line Graph</string>
    <string name="pie_graph_title">Pie Graph</string>
    <string-array name="months_array">
        <item>N/A</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    

</resources>
