<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.charles.cartpartners_v1.MetricsView">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/TimelineButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/timeline_title"
            />

        <Button
            android:id="@+id/GraphButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/line_graph_title"
            />
        <Button
            android:id="@+id/PieButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/pie_graph_title"
            />

    </GridLayout>

    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_layout"
        android:layout_centerHorizontal="true"
        />

    <GridLayout
        android:id="@+id/fragView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_below="@+id/month_spinner"
        >

    </GridLayout>

    <SeekBar
        android:id="@+id/timelineDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:thumb="@drawable/seek_thumb"
        android:progressDrawable="@drawable/seek_style"
        android:layout_below="@+id/fragView"
        android:progressTint="@android:color/transparent"
        android:splitTrack="false"
        android:paddingTop="5dp"
        />

    <TextView
        android:id="@+id/numDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timelineDays"
        android:layout_centerHorizontal="true"
        />






</RelativeLayout>
