<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:paddingTop="10dp"
        android:text="@string/login"

        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.90"
        android:src="@drawable/cartpartners_logo"
        android:layout_below="@+id/loginTitle"
        android:layout_centerHorizontal="true"
        android:paddingTop="0dp"
        android:paddingBottom="20dp"
        />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/input_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_below="@+id/input_email"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/spacer2"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:layout_toStartOf="@id/input_password"
        />

    <Switch
        android:id="@+id/remember_me_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:layout_toEndOf="@id/spacer2"
        android:theme = "@style/SwitchTheme"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        />

    <TextView
        android:id="@+id/remember_me_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/remember_me_switch"
        android:layout_below="@id/input_password"
        android:text="Remember me"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/remember_me_switch"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>